2001-10-18  Radek Doulik  <rodo@ximian.com>

	* htmltablecell.c (calc_size): fix rendering

2001-10-18  Larry Ewing  <lewing@ximian.com>

	* htmltokenizer.c: fix to guarantee no invalid utf8 sequences can
	make it past any part of the tokenizer into the tokens.  This is
	critical to prevent looping in g_utf8* on certain input.

2001-10-17  Larry Ewing  <lewing@ximian.com>

	* htmltext.c (html_text_set_text): update the text_len when we set
	the text.

	* htmlembedded.c (destroy): sink any widget that hasn't been
	parented yet.

2001-10-17  Radek Doulik  <rodo@ximian.com>

	* htmlobject.c (html_object_add_to_changed): new function, adds
	object to changed list and tries to minimalize repeated drawing

	* htmlengine-edit-cut-and-paste.c (delete_object_do): flush queue
	before delete to avoid deleted object drawing

	* htmlengine.c (html_engine_flush_draw_queue): make it possible
	flush draw queue when engine is frozen

	* htmltext.c (html_text_op_cut_helper): fix rendering

2001-10-16  Larry Ewing  <lewing@ximian.com>

	* htmlselect.c (copy): implement enough of copy that it no longer
	crashes when copied.

2001-10-17  Radek Doulik  <rodo@ximian.com>

	* htmltable.c (calc_size): fix rendering issues

2001-10-16  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_get_nb_width): fix for case where more
	than 2 non-breakable texts are in line, use get_next_nb_width
	(get_next_nb_width): new helper function

2001-10-16  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c: include <stdlib.h> for abs definition.

	* htmlengine.h: add allow_frameset boolean.

	* htmlengine.c (html_engine_init): add allow_frameset paramter.
	(parse_f): only parse the frameset and frames if allow_frameset is
	true.
	(parse_n): only discard the noframes body if allow_frameset is
	true.
	(html_engine_init): initialize allow_frameset.

	* htmltokenizer.c (add_byte): discard '\0' on input, it just
	confuses the rest of the tokenizer and serves no purpose.
