@@ -1,3 +1,9 @@
+2001-10-18  Larry Ewing  <lewing@ximian.com>
+
+	* htmlengine.c (update_embedded): go ahead and draw the
+	background.  This cuts down on flashing when switching pages
+	quickly.
+
 2001-10-18  Radek Doulik  <rodo@ximian.com>
 
 	* htmltablecell.c (calc_size): fix rendering
